# frontman

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  frontman.toml
demos/docker-compose/: README.md  demo.toml  docker-compose.yaml
demos/k8s/: README.md  frontman-deployment.yaml  kind.yaml  origin-deployment.yaml
demos/origin/: go.mod  main.go
docker/: frontman.Dockerfile  origin.Dockerfile
src/: args.rs  config.rs  main.rs  proxy.rs
