[package]
name = "frontman"
version = "0.1.0"
authors = ["matty-rose <matthewrose153@gmail.com>"]
edition = "2021"
repository = "https://github.com/matty-rose/frontman/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
